force-app/main/default/objects/Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Captures full Address of the Account</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>