force-app/main/default/objects/Address__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <description>Added as a part of BIZ-59993, 
On the Invoice Document currently in Netsuite they pass on  Addressee and Phone data from Address</description>
    <label>Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>