force-app/main/default/objects/Address__c/fields/Billing_Attn__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attn__c</fullName>
    <label>Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>