force-app/main/default/objects/Address__c/fields/CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafeID</label>
    <type>Text</type>
</CustomField>