force-app/main/default/objects/Address__c/fields/Is_State_Code_blank__c.field-meta.xml
<CustomField>
    <fullName>Is_State_Code_blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is State Code blank?</label>
    <type>Checkbox</type>
</CustomField>