force-app/main/default/objects/Address__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Added as a part of BIZ-59993,
On the Invoice Document currently in Netsuite they pass on Addressee and Phone data from Address</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>